--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "ngf-bootstrap": "0.0.5",
     "npm": "^6.1.0",
     "rxjs": "5.5.6",
+    "toastr": "^2.1.4",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.3",
+    "@angular-devkit/build-angular": "~0.6.6",
+    "@angular/cli": "6.0.7",
     "@angular/compiler-cli": "5.2.8",
     "@angular/language-service": "5.2.8",
     "@types/jasmine": "2.8.6",
@@ -37,7 +39,7 @@
     "codelyzer": "4.2.1",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.2",
+    "karma": "^2.0.3",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "1.4.2",
     "karma-jasmine": "1.1.1",
